--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.16.5",
     "axios": "^1.6.8",
+    "helmet": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
