--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,8 +20,11 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
